# grml2usb

./: .gitignore  .hgtags  Makefile  README.md  TODO  grml2iso  grml2iso-compat  grml2iso-compat.8.txt  grml2iso.8.txt  grml2usb  grml2usb-compat  grml2usb-compat.8.txt  grml2usb.8  grml2usb.8.adoc  grml2usb.8.txt  grml2usb.py  pyproject.toml  pytest.ini  setup.cfg  tarball.sh
.github/workflows/: check-full.yml  package-build.yml  release.yml
debian/: NEWS  changelog  control  copyright  grml2usb.dirs  grml2usb.install  grml2usb.manpages  overrides  rules
debian/tests/: control  smoke-grml2usb-py2  smoke-grml2usb-py3
doc/: Makefile  mbr.8.adoc  mbr.8.txt
lilo/: build_info.txt  lilo.static.amd64  lilo.static.i386
mbr/: .gitignore  Makefile  mbr.S
test/: conftest.py  docker-build-deb.sh  gha-build-deb.sh  grml2usb.py  grml2usb_test.py
test/iso-contents/: grml-full-2025.12-amd64.zeroed  grml-full-2025.12-arm64.zeroed
test/iso-contents/grml-full-2025.12-amd64/GRML/grml-full-amd64/: grml-version
test/iso-contents/grml-full-2025.12-amd64/boot/grub/: grmlfullamd64_default.cfg  grmlfullamd64_options.cfg  loopback.cfg  netboot.cfg
test/iso-contents/grml-full-2025.12-amd64/boot/isolinux/: addons_list.cfg  boot-beep.msg  boot.cat  boot.msg  default.cfg  f5  grml.cfg  grmlmain.cfg  hidden.cfg  isolinux.cfg  menudefault.cfg  (+3 more)
test/iso-contents/grml-full-2025.12-amd64/conf/: bootfile.txt  bootfile_grmlfullamd64_1765471834  bootid.txt  buildinfo.json
test/iso-contents/grml-full-2025.12-arm64/conf/: bootfile.txt  bootid.txt  buildinfo.json
zsh/: _grml2usb
(+8 files in other folders)
